[metadata]
name = cx_PyGenLib
version = 3.2
description = Set of general Python modules
license = Python Software Foundation License
long_description = file: README.txt
author = Anthony Tuininga
author_email = anthony.tuininga@gmail.com
url = https://github.com/anthony-tuininga/cx_PyGenLib
scripts =
    img2py.py

[options]
python_requires = >=3.6
py_modules =
    ceDatabase
    ceDatabaseCache
    ceDataSource
    ceModuleLoader
    ceWin32NamedPipes
    cx_ClassLibrary
    cx_DatabaseTable
    cx_Exceptions
    cx_Handles
    cx_IniFile
    cx_LoggingOptions
    cx_OptionParser
    cx_Parser
    cx_ReadLine
    cx_Settings
    cx_ShellUtils
    cx_Threads
    cx_Tracing
    cx_Utils
    cx_Win32Pipe
    cx_Win32Service
    cx_XML
    srml2pdf
    xlml2xlsx
packages =
    ceGUI
